[gd_scene load_steps=6 format=3 uid="uid://c1m5spnsddppa"]

[ext_resource type="Script" path="res://ui/main_menu_screen.gd" id="1_aq1i6"]
[ext_resource type="Texture2D" uid="uid://dxidtsgr4mq5q" path="res://ui/theme/environment-preview.png" id="1_wjwln"]
[ext_resource type="Theme" uid="uid://df8keslie2rq7" path="res://ui/theme/game_theme.tres" id="2_ribsk"]
[ext_resource type="Texture2D" uid="uid://cwe1lm5fdje7l" path="res://ui/theme/player-run-5.png" id="3_p6c8i"]
[ext_resource type="Texture2D" uid="uid://dq8t2f2s1v0km" path="res://ui/theme/octopus-4.png" id="4_q762s"]

[node name="MainMenuScreen" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_aq1i6")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -288.0
offset_top = -68.0
offset_right = 288.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wjwln")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ribsk")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VSeparator" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VSeparator"]
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VSeparator"]
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VSeparator"]
layout_mode = 2
text = "Exit"

[node name="Player-run-5" type="Sprite2D" parent="."]
position = Vector2(227, 229)
texture = ExtResource("3_p6c8i")

[node name="Octopus-4" type="Sprite2D" parent="."]
position = Vector2(336, 214)
texture = ExtResource("4_q762s")

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VSeparator/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VSeparator/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VSeparator/ExitButton" to="." method="_on_exit_button_pressed"]
